# ai-lab

./: .gitignore  Brewfile  README.md  lab.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
archive/: README.md
catalog/: hypotheses.yaml  research-tastes.yaml  scientist-schemes.yaml  skill-bundles.yaml  tasks.yaml
dashboard/: README.md  pyproject.toml
docs/: index.md  tutorial.md
docs/assets/: ai-lab-scientist-workflow.yaml  autoresearch-plots.js  btc-autoresearch-cycle1-adaptive-relative.vl.json  btc-autoresearch-cycle1-cost-stress.vl.json  btc-autoresearch-cycle1-leaderboard.vl.json  btc-autoresearch-cycle1-risk-return.vl.json  btc-benchmark-candidates.json  btc-trials.json  extra.css  vega-embed.js  vega-run-explorer.js
docs/evaluations/: btc-benchmark--autoresearch--extended.md  btc-benchmark--autoresearch--overnight-v1.md  btc-benchmark--autoresearch--smoke.md  btc-benchmark--autoscientist--extended.md  btc-benchmark--autoscientist--overnight-v1.md  btc-benchmark-extended-runbook.md  btc-benchmark-overnight-runbook.md  index.md
docs/schemes/: index.md  (+2 more)
evaluations/: README.md
inbox/: README.md
logs/: activity.md
memory/: index.md  preferences.md  research-history.md  source-index.md
meta/: README.md
policies/: connector-policy.md  development-policy.md  evaluation-runtime-policy.md  install-checklist.md  privacy-policy.md  research-policy.md  scientist-runtime-policy.md  update-policy.md
reports/: system-status.md
scientists/: README.md
sources/: README.md  sources.yaml
tasks/: README.md
tests/: test_ai_lab_runner.py
(+435 files in other folders)
