[project]
name = "ai-lab"
version = "0.1.0"
description = "Local AI Lab helper tooling for W&B-observed AI scientist task loops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "wandb>=0.27.2",
    "weave>=0.52.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
