[project]
name = "ai-lab"
version = "0.1.0"
description = "Local AI Lab helper tooling for W&B-observed AI scientist task loops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=2.1.0",
    "pytest>=8.4.0",
    "pyyaml>=6.0.2",
    "ruff>=0.15.16",
    "wandb>=0.27.2",
    "weave>=0.52.42",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
exclude = [
    "^site/",
    "^sources/checkouts/",
    "^tasks/.*/(assets|code|plots|reports|results|runs)/",
]
